--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "node index.js",
-      "start:watch": "node --watch --inspect index.js"
+    "start": "node index.js",
+    "start:watch": "node --watch --inspect index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
